--- a/app/src/main/res/layout/activity_store_header.xml
+++ b/app/src/main/res/layout/activity_store_header.xml
@@ -64,8 +64,8 @@
 
         <ImageView
             android:id="@+id/goodshow_btn_msg"
-            android:layout_width="79px"
-            android:layout_height="79px"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="20px"
