--- a/app/src/main/res/layout/activity_searchgood_item_grid.xml
+++ b/app/src/main/res/layout/activity_searchgood_item_grid.xml
@@ -4,7 +4,7 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="1dp"
+    android:layout_margin="1px"
     android:background="@color/bg_white"
     android:orientation="vertical">
 
@@ -23,7 +23,7 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="75dp"
         android:layout_marginLeft="5dp"
         android:background="@color/bg_white"
         android:paddingBottom="5dp">
