--- a/app/src/main/res/layout/fragment_good_eva.xml
+++ b/app/src/main/res/layout/fragment_good_eva.xml
@@ -1,13 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="match_parent"
-                                     android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="2px"
+        android:background="@color/colorLine"/>
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_eva"
         android:layout_width="match_parent"
-        android:layout_marginTop="6dp"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
