--- a/app/src/main/res/layout/fragment_good_info.xml
+++ b/app/src/main/res/layout/fragment_good_info.xml
@@ -68,7 +68,7 @@
                                 android:layout_height="wrap_content"
                                 android:text="￥799"
                                 android:textColor="@color/tv_price"
-                                android:textSize="@dimen/tv_Regular"/>
+                                android:textSize="@dimen/tv_Blod"/>
 
                             <TextView
                                 android:id="@+id/tv_old_price"
@@ -78,7 +78,7 @@
                                 android:gravity="center_vertical"
                                 android:text="￥799"
                                 android:textColor="@color/tv_name"
-                                android:textSize="@dimen/tv_small"/>
+                                android:textSize="@dimen/tv_light"/>
 
                         </LinearLayout>
 
@@ -92,7 +92,7 @@
                                 android:id="@+id/tv_goods_postage"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="邮费：包邮"
+                                android:text="快递：免邮费"
                                 android:textColor="@color/tv_hint"
                                 android:textSize="@dimen/tv_light"/>
 
@@ -124,8 +124,8 @@
 
                             <ImageView
                                 android:id="@+id/iv_ensure"
-                                android:layout_width="230dp"
-                                android:layout_height="10dp"
+                                android:layout_width="240dp"
+                                android:layout_height="11dp"
                                 android:scaleType="fitXY"
                                 android:src="@drawable/item_goods_ensure"/>
 
@@ -137,7 +137,7 @@
                         android:id="@+id/llGoodDiscount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
+                        android:layout_marginTop="3dp"
                         android:background="@color/bg_white"
                         android:padding="10dp">
 
@@ -170,7 +170,7 @@
                         android:id="@+id/ll_current_goods"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
+                        android:layout_marginTop="3dp"
                         android:background="@color/bg_white"
                         android:padding="10dp">
 
@@ -205,17 +205,17 @@
                         android:id="@+id/ll_comment"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginTop="2dp"
+                        android:layout_marginTop="3dp"
                         android:background="@color/bg_white"
                         android:clickable="true"
-                        android:gravity="center_vertical"
-                        android:padding="10dp">
+                        android:gravity="center_vertical">
 
 
                         <TextView
                             android:id="@+id/tv_comment_count"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_margin="10dp"
                             android:text="评价（22）"
                             android:textColor="#222222"
                             android:textSize="13dp"/>
@@ -227,9 +227,19 @@
                             android:layout_height="wrap_content"
                             android:layout_alignParentRight="true"
                             android:layout_centerVertical="true"
+                            android:layout_margin="10dp"
                             android:src="@drawable/right_img"/>
 
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="1px"
+                            android:layout_alignParentBottom="true"
+                            android:layout_marginLeft="10dp"
+                            android:layout_marginRight="10dp"
+                            android:background="@color/colorLine"/>
+
                     </RelativeLayout>
+
 
                     <RelativeLayout
                         android:layout_width="match_parent"
@@ -238,8 +248,7 @@
                         <android.support.v7.widget.RecyclerView
                             android:id="@+id/rvEvaluate"
                             android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginTop="1dp"/>
+                            android:layout_height="wrap_content"/>
                     </RelativeLayout>
 
                     <RelativeLayout
@@ -251,27 +260,29 @@
                         <ImageView
                             android:id="@+id/iv_good_store_img"
                             android:layout_width="60dp"
-                            android:layout_height="55dp"
+                            android:layout_height="60dp"
+                            android:layout_centerVertical="true"
                             android:src="@drawable/test_good_store"/>
 
                         <TextView
                             android:id="@+id/tv_good_store_name"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginLeft="10dp"
-                            android:layout_toRightOf="@+id/iv_good_store_img"
+                            android:layout_alignLeft="@+id/iv_good_store"
+                            android:layout_alignParentTop="true"
+                            android:layout_alignStart="@+id/iv_good_store"
                             android:text="梅子熟了 文艺复古清新女装"
                             android:textColor="@color/tv_name"
-                            android:textSize="@dimen/tv_Normal"/>
+                            android:textSize="@dimen/tv_light"/>
 
 
                         <Button
                             android:id="@+id/iv_good_store"
                             style="?android:attr/borderlessButtonStyle"
-                            android:layout_width="65dp"
-                            android:layout_height="20dp"
+                            android:layout_width="68dp"
+                            android:layout_height="25dp"
                             android:layout_marginLeft="10dp"
-                            android:layout_marginTop="40dp"
+                            android:layout_marginTop="32dp"
                             android:layout_toRightOf="@+id/iv_good_store_img"
                             android:background="@drawable/good_bt_store"
                             android:button="@null"
@@ -280,66 +291,73 @@
                             android:textSize="@dimen/tv_small"/>
 
                         <View
-                            android:layout_width="2px"
-                            android:layout_height="55dp"
-                            android:layout_marginLeft="230dp"
+                            android:layout_width="1px"
+                            android:layout_height="60dp"
+                            android:layout_marginRight="10dp"
+                            android:layout_toLeftOf="@+id/good_store_point"
                             android:background="@color/colorLine"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="240dp"
-                            android:text="宝贝描述"
-                            android:textColor="@color/tv_hint"
-                            android:textSize="@dimen/tv_small"/>
+                        <RelativeLayout
+                            android:id="@+id/good_store_point"
+                            android:layout_width="70dp"
+                            android:layout_height="60dp"
+                            android:layout_alignParentRight="true"
+                            android:layout_marginRight="10dp">
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="240dp"
-                            android:layout_marginTop="25dp"
-                            android:text="卖家服务"
-                            android:textColor="@color/tv_hint"
-                            android:textSize="@dimen/tv_small"/>
 
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="240dp"
-                            android:layout_marginTop="45dp"
-                            android:text="物流服务"
-                            android:textColor="@color/tv_hint"
-                            android:textSize="@dimen/tv_small"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text="宝贝描述"
+                                android:textColor="@color/tv_hint"
+                                android:textSize="@dimen/tv_small"/>
 
-                        <TextView
-                            android:id="@+id/tvStoreDescPoint"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="285dp"
-                            android:text="4.8"
-                            android:textColor="@color/tv_price"
-                            android:textSize="@dimen/tv_small"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:text="卖家服务"
+                                android:textColor="@color/tv_hint"
+                                android:textSize="@dimen/tv_small"/>
 
-                        <TextView
-                            android:id="@+id/tvStoreServicePoint"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="285dp"
-                            android:layout_marginTop="25dp"
-                            android:text="4.8"
-                            android:textColor="@color/tv_price"
-                            android:textSize="@dimen/tv_small"/>
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:text="物流服务"
+                                android:textColor="@color/tv_hint"
+                                android:textSize="@dimen/tv_small"/>
 
-                        <TextView
-                            android:id="@+id/tvStoreDeliveryPoint"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_marginLeft="285dp"
-                            android:layout_marginTop="45dp"
-                            android:text="4.8"
-                            android:textColor="@color/tv_price"
-                            android:textSize="@dimen/tv_small"/>
+                            <TextView
+                                android:id="@+id/tvStoreDescPoint"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:text="4.8"
+                                android:textColor="@color/tv_price"
+                                android:textSize="@dimen/tv_small"/>
 
+                            <TextView
+                                android:id="@+id/tvStoreServicePoint"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:text="4.8"
+                                android:textColor="@color/tv_price"
+                                android:textSize="@dimen/tv_small"/>
+
+                            <TextView
+                                android:id="@+id/tvStoreDeliveryPoint"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentBottom="true"
+                                android:layout_alignParentRight="true"
+                                android:text="4.8"
+                                android:textColor="@color/tv_price"
+                                android:textSize="@dimen/tv_small"/>
+
+                        </RelativeLayout>
                     </RelativeLayout>
 
                     <!-- 上拉查看图文详情 -->
@@ -363,8 +381,8 @@
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="6dp"
                             android:text="上拉查看图文详情"
-                            android:textColor="#222222"
-                            android:textSize="@dimen/tv_Normal"/>
+                            android:textColor="@color/tv_hint"
+                            android:textSize="@dimen/tv_light"/>
                     </LinearLayout>
 
 
