--- a/app/src/main/res/layout/fragment_home_footer.xml
+++ b/app/src/main/res/layout/fragment_home_footer.xml
@@ -9,6 +9,7 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_home_goods"
         android:layout_width="match_parent"
+        android:background="@color/colorLine"
         android:layout_height="match_parent"/>
 
 </LinearLayout>
