--- a/app/src/main/res/layout/fragment_home_item_tab.xml
+++ b/app/src/main/res/layout/fragment_home_item_tab.xml
@@ -3,6 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@color/colorLine"
     android:orientation="vertical">
 
     <include layout="@layout/fragment_home_item_tab_title"/>
@@ -10,14 +11,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="2px"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/home_tab_img1"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="1dp"
+            android:layout_marginRight="1px"
             android:layout_weight="0.463"
             android:scaleType="fitXY"/>
 
@@ -26,7 +27,8 @@
             android:id="@+id/home_tab_img2"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="1dp"
+            android:layout_marginLeft="1px"
+            android:layout_marginRight="1px"
             android:layout_weight="0.264"
             android:scaleType="fitXY"/>
 
@@ -34,6 +36,7 @@
             android:id="@+id/home_tab_img3"
             android:layout_width="0px"
             android:layout_height="match_parent"
+            android:layout_marginLeft="1px"
             android:layout_weight="0.264"
             android:scaleType="fitXY"/>
 
@@ -42,7 +45,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="110dp"
-        android:layout_marginTop="1dp"
+        android:layout_marginTop="2px"
         android:orientation="horizontal">
 
 
@@ -50,7 +53,7 @@
             android:id="@+id/home_tab_img4"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="1dp"
+            android:layout_marginRight="1px"
             android:layout_weight="0.463"
             android:scaleType="fitXY"/>
 
@@ -59,7 +62,8 @@
             android:id="@+id/home_tab_img5"
             android:layout_width="0px"
             android:layout_height="match_parent"
-            android:layout_marginRight="1dp"
+            android:layout_marginRight="1px"
+            android:layout_marginLeft="1px"
             android:layout_weight="0.265"
             android:scaleType="fitXY"/>
 
@@ -67,6 +71,7 @@
             android:id="@+id/home_tab_img6"
             android:layout_width="0px"
             android:layout_height="match_parent"
+            android:layout_marginLeft="1px"
             android:layout_weight="0.264"
             android:scaleType="fitXY"
             />
