--- a/app/src/main/res/layout/fragment_store_all.xml
+++ b/app/src/main/res/layout/fragment_store_all.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/bg_gray"
+        android:layout_marginTop="1dp"
         android:orientation="vertical">
 
         <LinearLayout
