change gooddetail data

--- a/app/src/main/res/layout/fragment_good_dialog_promotion.xml
+++ b/app/src/main/res/layout/fragment_good_dialog_promotion.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                                     android:layout_width="match_parent"
-                                     android:layout_height="match_parent"
-                                     android:background="@color/bg_white"
-                                     android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:background="@color/bg_white"
+              android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -30,37 +30,9 @@
     </RelativeLayout>
 
 
-    <RelativeLayout
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/rl_promotion"
         android:layout_width="match_parent"
-        android:layout_height="800px"
-        android:layout_margin="30px"
-        android:layout_marginTop="50px">
-
-
-        <TextView
-            android:id="@+id/tvGoods_prom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="单笔订单两件7折，三件6折"
-            android:textColor="@color/tv_name"
-            android:textSize="@dimen/tv_Normal"/>
-
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1px"
-            android:layout_marginTop="60px"
-            android:background="@color/colorLine"/>
-
-        <TextView
-            android:id="@+id/tvGoods_prom2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="70px"
-            android:text="单笔订单满600减50，满1000减200"
-            android:textColor="@color/tv_name"
-            android:textSize="@dimen/tv_Normal"/>
-
-
-    </RelativeLayout>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
