修改商品详情

--- a/app/src/main/res/layout/fragment_good_dialog_promotion.xml
+++ b/app/src/main/res/layout/fragment_good_dialog_promotion.xml
@@ -32,7 +32,9 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rl_promotion"
+        android:layout_marginTop="20dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_marginBottom="50dp"
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
