--- a/app/src/main/res/layout/fragment_home_item_tab2.xml
+++ b/app/src/main/res/layout/fragment_home_item_tab2.xml
@@ -10,13 +10,15 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="220dp">
+        android:layout_height="220dp"
+        android:layout_marginTop="1dp">
 
         <ImageView
             android:id="@+id/home_tab2_img1"
             android:layout_width="0dp"
             android:layout_height="match_parent"
             android:layout_marginRight="1px"
+            android:scaleType="fitXY"
             android:layout_weight="1"/>
 
         <LinearLayout
@@ -30,6 +32,7 @@
                 android:id="@+id/home_tab2_img2"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
+                android:scaleType="fitXY"
                 android:layout_marginBottom="1px"
                 android:layout_weight="1"/>
 
@@ -38,7 +41,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="1px"
-                android:layout_weight="1"/>
+                android:layout_weight="1"
+                android:scaleType="fitXY"/>
 
 
         </LinearLayout>
